<resources>
    <string name="scoreBoard">점수판</string>
    <string name="formation">포메이션</string>
    <string name="teamManagement">내 팀 관리</string>

    <string name="vs">VS</string>
    <string name="matchDetail">경기 세부 일정</string>
    <string name="playTime">플레이 타임</string>
    <string name="minute">분</string>
    <string name="remainTime">남은 시간</string>
    <string name="matchEndAlarm">경기 종료 전 알림</string>
    <string name="matchStart">경기 시작</string>
    <string name="pause">일시 정지</string>
    <string name="matchSet">경기 종료</string>
    <string name="restartMatch">경기 재개</string>
    <string name="matchResult">경기 결과</string>
    <string name="end">종료</string>
    <string name="gameResultWinDescription">%s 팀이 %s 팀을\n%d : %d 으로 승리하였습니다!</string>
    <string name="gameResultDrawDescription">%s 팀과 %s 팀이\n%d : %d 으로 무승부입니다!</string>

    <string name="teamLogo">팀 로고</string>
    <string name="teamName">팀 명</string>
    <string name="addTeamMember">선수 추가</string>
    <string name="contentDescription">스트라이커가 슈팅하고 있는 장면</string>
    <string name="stadiumDescription">축구 경기장 배경화면</string>
    <string name="boardDescription">축구 경기장 보드판</string>

    <string name="selectionPlayer">선발 선수</string>
    <string name="reservePlayer">후보 선수</string>

    <string name="addMemberDescription">축구선수가 신은 축구화 사진</string>
    <string name="addMemberDescription2">새로운 선수 사진</string>
    <string name="newMemberNameHint">선수 이름</string>
    <string name="newMemberBackNumberHint">등 번호</string>
    <string name="newMemberPositionHint">포지션</string>
    <string name="reserveCheckBox">후보</string>
    <string name="initialSetting">설정 초기화</string>
    <string name="complete">완료</string>

    <string name="MemberBackNumberFormat">등 번호 : %d</string>
    <string name="memberDescription">%s 선수 프로필 사진</string>
    <string name="moreDescription">더 보기</string>

    <string name="changeTeamName">팀 이름 변경</string>
    <string name="cancel">취소</string>

    <string name="changeTeamNameHint">새로운 팀 이름</string>
    <string name="changeNickNameHint">새로운 선수 이름</string>
    <string name="changeBackNumberHint">새로운 선수 등 번호</string>
    <string name="changePositionHint">새로운 선수 포지션</string>

    <string name="changeNickName">닉네임 변경</string>
    <string name="changeBackNumber">등 번호 변경</string>
    <string name="changePosition">포지션 변경</string>
    <string name="changeImage">이미지 변경</string>
    <string name="removeImage">이미지 제거</string>
    <string name="changeIsBenchWarmer">선발 / 후보 변경</string>
    <string name="removeMember">선수 방출</string>
    <string name="confirm">확인</string>

    <string name="timeBoardPlayTime">플레이 타임 = %d 분</string>
    <string name="timeBoardAlarmTime">경기 종료 전 알림 = %d 분</string>
</resources>