<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tgyuu.presentation.feature.team.bottomsheet.MemberMoreBottomSheetViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/bottomSheetLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_20_white"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".feature.team.bottomsheet.MemberMoreBottomSheetFragment">

        <TextView
            android:id="@+id/changeNickNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/changeNickName"
            android:textColor="@color/gray3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/changeImageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/changeImage"
            android:textColor="@color/gray3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/removeImageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/removeImage"
            android:textColor="@color/gray3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/kickOutPlayerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/kickOutPlayer"
            android:textColor="@color/gray3"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rectangle_20_main"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</layout>
